--- a/dice.css
+++ b/dice.css
@@ -239,28 +239,12 @@ input[type="text"]:focus {
     font-weight: bold;
 }
 
-
-/* @media only screen and (max-width: 425px) {
-    .form {
-        width: 100%;
-        font-size: 15px;
-        grid-column: 1/2;
-    }
-    .cont {
-        grid-template-columns: 425px;
-        width: 425px;
-    }
-    .p1,
-    .p2 {
-        display: none;
-    }
-} */
-
 @media (max-width:960px) {
     .container {
         display: flex;
         flex-direction: column-reverse;
         justify-content: flex-end;
+        height: 100%;
     }
     .menu {
         display: none;
