--- a/homepage.css
+++ b/homepage.css
@@ -31,6 +31,7 @@ a{
     box-shadow:0px 5px 8px black;
     position: fixed;
     width:100%;
+    transition: background-color 0.7s;
 }
 .scroll{
     background-color: gold;
