--- a/homepage.css
+++ b/homepage.css
@@ -31,6 +31,7 @@ a{
     box-shadow:0px 5px 8px black;
     position: fixed;
     width:100%;
+    transition: background-color 0.7s;
 }
 .scroll{
     background-color: gold;
@@ -48,7 +49,7 @@ a{
     /* border:2px solid; */
 }
 .main-section h1{
-    font-size:40px;
+    font-size:41px;
     letter-spacing:0.1cm;
 }
 .main-section h1 span{
@@ -58,3 +59,35 @@ a{
 .main-section p{
     font-family: var(--captions-font);
 }
+.About-Me{
+    background:#9B4F0F;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    text-align:center;
+    padding:2.5em 1em;
+    font-size:22px;
+    color:white;
+    font-family:var(--captions-font);
+
+}
+.About-Me img{
+    width:100px;
+    height:100px;
+    border-radius:50%;
+    border:5px solid white;
+    box-shadow:0px 0px 5px black;
+
+}
+.social-media{
+    display:flex;
+    flex-direction:row;
+    justify-content:space-between;
+}
+.fab{
+    padding:0 2em;
+    transform:scale(1.5);
+}
+
+
+
